# vecstash

./: .gitignore  CLAUDE.md  LICENSE  Makefile  README.md  install.sh  pyproject.toml
.github/workflows/: release.yml  test.yml
docs/: DEVELOPMENT.md  README.md
examples/: bun-docs.md
src/vecstash/: __init__.py  chunking.py  cli.py  config.py  daemon.py  embedder.py  extraction.py  logging_utils.py  rpc.py  storage.py  updater.py
support/: com.vecstash.daemon.plist
tests/: test_chunking.py  test_cli_ingest.py  test_cli_models.py  test_cli_reset.py  test_cli_storage.py  test_cli_version.py  test_config.py  test_daemon_preload.py  test_embedder_factory.py  test_extraction.py  test_storage.py  test_storage_chunks.py  test_updater.py
